# main_projects

./: .gitignore  README.md  test_file.txt
algorithms/: .substring_by_z_function.cpp.swp  compute_exercises.cpp  derivative_poly.cpp  readme.md  substring_by_kmp.cpp  substring_by_z_function.cpp
c++_other/: have_methods.cpp  move_if_noexcept.cpp  readme.md
c_lib/mmap_with_semaphore/: Makefile  creator.cpp  readme.md  writer.cpp
conteiner/: Makefile  a.out  allocator.h  conteiner.h  main  main.cpp  test.cpp
conteiners/like_vector_with_allocator/: allocator.h  conteiner.h  main.cpp  readme.md
conteiners/lock_free/unbounded_stack/: CMakeLists.txt  container_producer_consumer_test.h  main.cpp  readme.md  unbounded_stack.h
conteiners/producer_consumer_test/: container_producer_consumer_test.h
conteiners/synch_buffers/bounded_synch_associative_buffer/: CMakeLists.txt  bounded_synch_associative_buffer.h  readme.md
cpp_other/: cache_miss_test.cpp  my_type_traits.cpp  readme.md
cpp_other/bounded_synch_associative_buffer/: bounded_synch_associative_buffer.h  main.cpp
echo_server/: client  client.c  server  server.c
echo_server_select/: server  server.cpp
patterns/: decorator.cpp  readme.md  strategy.cpp
patterns/observer/: Makefile  concumer.cpp  concumer.h  main.cpp  slave.cpp  slave.h
servers/: readme.md
servers/echo_server/: Makefile  client  client.c  server.c
servers/echo_server_epoll/: Makefile  server  server.cpp  struct
servers/echo_server_select/: Makefile  server.cpp
thread_pull/: Makefile  readme.md  thread_pull  thread_pull.cpp
(+1 files in other folders)
